--- a/components/journal/EchoEntryForm.module.css
+++ b/components/journal/EchoEntryForm.module.css
@@ -3,8 +3,6 @@
   flex-direction: column;
   min-height: 100%;
   width: 100%;
-  max-width: 600px;
-  margin: 0 auto;
   background-color: var(--color-background);
 }
 
@@ -12,7 +10,6 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
-  padding: 0 16px;
   padding-bottom: calc(24px + env(safe-area-inset-bottom, 0px));
 }
 
